studio/deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wdk-studio
  name: wdk-studio
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: wdk-studio
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wdk-studio
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: wdk-studio-keys
          image: finos/symphony-wdk-studio:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 35
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: wdk-studio
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 35
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1500m
              memory: 1536Mi
            requests:
              cpu: 1500m
              memory: 1536Mi
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /symphony/rsa
              name: keys
            - mountPath: /symphony/data
              name: data
            - mountPath: /symphony/application-prod.yaml
              name: config
              subPath: application-prod.yaml
      securityContext:
        fsGroup: 101
        runAsGroup: 101
        runAsUser: 100
      volumes:
        - configMap:
            name: wdk-studio-config
          name: config
        - name: data
          persistentVolumeClaim:
            claimName: wdk-studio-data-pvc
        - name: keys
          secret:
            secretName: wdk-studio-keys
