studio/deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wdk-studio
  name: wdk-studio
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ports:
  - name: wdk
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: wdk-studio
  type: NodePort
